--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph (Facebook) -->
     <meta property="og:title" content="Nuovo Intrattenimento">
     <meta property="og:description" content="Questo contenuto è esclusivo">
-    <meta property="og:image" content="https://i.postimg.cc/R0ftp8m3/hvk1udav7.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/52TBNMQS/sp0fbhgr9.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://votredomain24e.com">
