--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <p><b style="color: red;"></b></p>
                 <div class="buttons-block">
-                    <a href="https://cjdcabh.pixls.one/p/LvIuf" class="step-btn submit-btn tr-submit-button showmail">ACCETTARE</a>
+                    <a href="https://cjdcabh.pixls.one/p/WQnuM" class="step-btn submit-btn tr-submit-button showmail">ACCETTARE</a>
                 </div>
             </div>
         </div>
